--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
 	"cSpell.words": [
 		"dbcon"
-	]
+	],
+	"python.pythonPath": "C:\\Users\\danao\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
 }
