Some VSCode stuff

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,5 @@
 	"cSpell.words": [
 		"dbcon"
 	],
-	"python.pythonPath": "C:\\Users\\danao\\AppData\\Local\\Programs\\Python\\Python38-32\\python.exe"
+	"python.pythonPath": "/Users/deadpackets/.pyenv/shims/python"
 }
